--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["lion1301 <<>>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 Flask = "^2.0.1"
+pdf2image = "^1.16.0"
 
 [tool.poetry.dev-dependencies]
 
