--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["lion1301 <<>>"]
 python = "^3.8"
 Flask = "^2.0.1"
 pdf2image = "^1.16.0"
+PyMuPDF = "^1.18.16"
+docx2pdf = "^0.1.7"
 
 [tool.poetry.dev-dependencies]
 
