--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ Flask = "^2.0.1"
 pdf2image = "^1.16.0"
 PyMuPDF = "^1.18.16"
 docx2pdf = "^0.1.7"
+Flask-Bootstrap = "^3.3.7"
+Flask-SQLAlchemy = "^2.5.1"
 
 [tool.poetry.dev-dependencies]
 
