--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "repl_python3_WA4Project"
+name = "wa4project"
 version = "0.1.0"
 description = ""
 authors = ["lion1301 <<>>"]
@@ -7,11 +7,12 @@ authors = ["lion1301 <<>>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 Flask = "^2.0.1"
-pdf2image = "^1.16.0"
+Flask-Bootstrap = "^3.3.7"
+pip = "^21.2.4"
+poetry = "^1.1.8"
+Flask-SQLAlchemy = "^2.5.1"
 PyMuPDF = "^1.18.16"
 docx2pdf = "^0.1.7"
-Flask-Bootstrap = "^3.3.7"
-Flask-SQLAlchemy = "^2.5.1"
 
 [tool.poetry.dev-dependencies]
 
